# codex-test2

./: .gitignore  README.md  ansible.cfg  generate.yml  pyproject.toml
group_vars/: all.yml  dc1.yml  global.yml
host_vars/: router1.json  router1.yml
openconf_device/: __init__.py  device.py  main.py  models.py  renderers.py
templates/: cisco_ios.j2
tests/: test_device.py  test_main.py  test_models.py
