[project]
name = "openconf-device"
version = "0.1.0"
description = "Example project for configuring network devices using an OpenConf-style data structure"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
openconf-cli = "openconf_device.main:main"
